k8s/bookings-service/bookings-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookings-service
  namespace: trabalho-microsservico
  labels:
    app: bookings-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bookings-service
  template:
    metadata:
      labels:
        app: bookings-service
    spec:
      containers:
        - name: bookings-service
          image: trabalho/bookings-service:local
          imagePullPolicy: Never
          ports:
            - containerPort: 3001
          readinessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 30
            periodSeconds: 15
