k8s/bookings-service/bookings-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookings-service
  namespace: trabalho-microsservico
  labels:
    app: bookings-service
spec:
  type: ClusterIP
  selector:
    app: bookings-service
  ports:
    - name: http
      port: 3001
      targetPort: 3001
