k8s/bookings-service/bookings-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookings-service-ingress
  namespace: trabalho-microsservico
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: bookings.trabalho.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookings-service
                port:
                  number: 3001
